# poc

./: .appveyor.yml  .gitignore  .travis.yml  LICENSE  README.md
cpp/binaryGap/: CMakeLists.txt  build.sh  main.cpp
cpp/hello_world/: CMakeLists.txt  README.md  main.cpp
cpp/task_01/: CMakeLists.txt  main.cpp
cpp/task_02/: main.cpp
cpp/task_03/: main.cpp  run.sh
cuda/hello_world/: build.sh  main.cu  main.cuh  vectorAdd.cu  vectorAdd.cuh
cuda/reduction/: CMakeLists.txt  build.sh  reduction.cpp
cuda/reduction_small/: LICENSE  README.md  performance.cpp  reduction.cpp  reduction.h  reduction_kernel.cu
cuda/solver/: CMakeLists.txt  README.md  args.cpp  args.h  build.sh  main.cpp  main.h  run.sh
cuda/vectorAdd/: CMakeLists.txt  README.md  clean.sh  name.sh
halide/knn/: README.md  knn.cpp  rand.h
halide/lesson_01/: README.md
halide/lesson_02/: CMakeLists.txt  README.md  clean.sh  lesson_02_input_image.cpp  run.sh
halide/lesson_03/: CMakeLists.txt  README.md  clean.sh
open3d-type/: CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix.inl  Matrix3d.cpp  Matrix3d.h  Matrix3f.cpp  Matrix3f.h  Matrix4d.cpp  Matrix4d.h  Matrix6d.cpp  Matrix6d.h  README.md  TestMatrix.cpp  TestMatrix.h  TestVector3.cpp  TestVector3.h  Vector3.cpp  Vector3.h  Vector3d.cpp  Vector3d.h  Vector3f.cpp  Vector3f.h  build.sh  main.cpp  performance.h  types.cpp  types.h
